# learningDL

./: .gitignore  CMakeLists.txt  Dockerfile.dev  README.md
padim/: anomaly_map.py  efficientnet_v2_s.pt  exp_0_model_efficientnet_v2_l_det.py  exp_1_model_efficientnet_v2_l_det.py  exp_1_model_efficientnet_v2_s_det.py  exp_1_model_mobilenet_det.py  exp_1_model_resnet18_det.py  exp_1_model_vgg16_det.py  export.py  main.py  multi_variate_gaussian.py  tmp.py
padim/cpp/: CMakeLists.txt  anomaly_map.h  baseModel.h  feature_extractor_engine.h  feature_extractor_torchscript.h  multi_variate_gaussian.h  padim.h  padim_ts.h  padim_utils.h  train.cpp
padim/cpp/data/: FeatureExtractor.onnx
unet/: CMakeLists.txt  dataloaders.h  loss.h  mult_class_test.cpp  mult_class_train.cpp  test.cpp.bak  train.cpp.bak  unet_model.h  unet_parts.h
yolov5/: CMakeLists.txt  README.md  README_zh_CN.md  augmentations.h  common.h  dataloaders.h  detect.cpp  general.h  loss.h  metrics.h  train.cpp  val.cpp  yolo.h
yolov5/data/: custom.yaml
yolov5/datasets/coco128/: train.txt
